--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ function preloadImages() {
       </td>
       <td width="5"><br>
       </td>
-      <td><a onmouseover="changeImages('PhotoGallery', 'photogallerytitlemo.gif'); return true;" onmouseout="changeImages('PhotoGallery', 'photogallerytitle.gif'); return true;" href="photogallery.html" onmousedown="changeImages('PhotoGallery', 'photogallerytitleck.gif'); return true;" onmouseup="changeImages('PhotoGallery', 'photogallerytitlemo.gif'); return true;"><img src="photogallerytitle.gif" alt="Photo Gallery" name="PhotoGallery" title="Photo Gallery" align="left" border="0" height="35" width="200"></a></td>
+  <!--    <td><a onmouseover="changeImages('PhotoGallery', 'photogallerytitlemo.gif'); return true;" onmouseout="changeImages('PhotoGallery', 'photogallerytitle.gif'); return true;" href="photogallery.html" onmousedown="changeImages('PhotoGallery', 'photogallerytitleck.gif'); return true;" onmouseup="changeImages('PhotoGallery', 'photogallerytitlemo.gif'); return true;"><img src="photogallerytitle.gif" alt="Photo Gallery" name="PhotoGallery" title="Photo Gallery" align="left" border="0" height="35" width="200"></a></td> -->
     </tr>
 <!--   <tr>
       <td colspan="4" align="center" width="314">
