--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html><head>
 
 
+
   
   <meta name="Description" content="brevard county orchid society">
 
@@ -98,7 +99,7 @@ function preloadImages() {
       </td>
       <td width="5"><br>
       </td>
-  <!--    <td><a onmouseover="changeImages('PhotoGallery', 'photogallerytitlemo.gif'); return true;" onmouseout="changeImages('PhotoGallery', 'photogallerytitle.gif'); return true;" href="photogallery.html" onmousedown="changeImages('PhotoGallery', 'photogallerytitleck.gif'); return true;" onmouseup="changeImages('PhotoGallery', 'photogallerytitlemo.gif'); return true;"><img src="photogallerytitle.gif" alt="Photo Gallery" name="PhotoGallery" title="Photo Gallery" align="left" border="0" height="35" width="200"></a></td> -->
+      <td><a onmouseover="changeImages('PhotoGallery', 'photogallerytitlemo.gif'); return true;" onmouseout="changeImages('PhotoGallery', 'photogallerytitle.gif'); return true;" href="photogallery/photogallery.html" onmousedown="changeImages('PhotoGallery', 'photogallerytitleck.gif'); return true;" onmouseup="changeImages('PhotoGallery', 'photogallerytitlemo.gif'); return true;"><img src="photogallerytitle.gif" alt="Photo Gallery" name="PhotoGallery" title="Photo Gallery" align="left" border="0" height="35" width="200"></a></td>
     </tr>
 <!--   <tr>
       <td colspan="4" align="center" width="314">
@@ -216,7 +217,7 @@ $10 for Spouse of member / $2 for each Junior Member (under 16 years
 old)</font> </li>
       </ul>
       <p><font face="Arial" size="+2">Next meeting of the BCOS is&nbsp;<span style="color: red;"><span style="color: rgb(0, 153, 0);"></span></span>,</font><font face="Arial" size="+2">&nbsp;<span style="color: rgb(0, 153, 0);"><span style="font-weight: bold;"><span style="color: rgb(204, 0, 0);"><span style="color: rgb(0, 153, 0);"><span style="color: black;"></span></span></span></span></span>on
-Monday, June 10<sup>th</sup> at 7:00 P.M at the <a href="http://www.space321.com/">Space Coast Association of Realtors</a>,
+Monday, July 8<sup>th</sup> at 7:00 P.M at the <a href="http://www.space321.com/">Space Coast Association of Realtors</a>,
       <a href="http://www.space321.com/Space_Coast_Realtors_Map_and_Directions">2950
 Pineda Plaza Way, Palm Shores, FL 32940</a>.<br>
       </font></p>
@@ -228,7 +229,7 @@ Pineda Plaza Way, Palm Shores, FL 32940</a>.<br>
   </tbody>
 </table>
 
-<p align="left"><font size="-4">Last Modified 05-28-2019 by Dave
+<p align="left"><font size="-4">Last Modified 06-13-2019 by Dave
 Siegrist </font></p>
 
 </body></html>
